WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35132
Mouse cursor sometimes flickers over Flash content
https://bugs.webkit.org/show_bug.cgi?id=35132
Summary
Mouse cursor sometimes flickers over Flash content
Alexey Proskuryakov
Reported
2010-02-18 14:37:06 PST
WebKit sometimes changes mouse cursor over Netscape plug-ins, even though those are supposed to be in control of cursor. 1. EventHandler sets cursor before dispatching events to plug-in. 2. SetCursor overrides in WEbHTML view are currently ineffective, to AppKit resets the mouse pointer to default once it cannot find an appropriate cursor rect. This causes flickering - and I actually saw the cursor disappear on google.com/finance. The problems are most visible with Flash 10.1 beta. <
rdar://problem/7664353
>
Attachments
proposed fix
(12.49 KB, patch)
2010-02-19 10:00 PST
,
Alexey Proskuryakov
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2010-02-19 10:00:45 PST
Created
attachment 49085
[details]
proposed fix Did some brief testing on Windows, and this doesn't seem to break things.
Maciej Stachowiak
Comment 2
2010-02-19 16:02:54 PST
Comment on
attachment 49085
[details]
proposed fix r=me
Alexey Proskuryakov
Comment 3
2010-02-19 17:23:49 PST
Committed <
http://trac.webkit.org/changeset/55041
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug